--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,9 @@ jobs:
       - name: Build wheels
         run: |
           python -m build --wheel
+
+      - name: Upload Binary artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: pythonode-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.versions }}
+          path: dist/
