--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,8 @@ jobs:
       
       - name: Build wheels
         run: |
-          python -m build --wheel
+          pip install build
+          python3 -m build --wheel
 
       - name: Upload Binary artifacts
         uses: actions/upload-artifact@v4
