Update MANIFEST.in to include all files in externals directory

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include pythonode/lib/*
-recursive-include pythonode/externals *.node *.so *.dll *.dylib *.h
+recursive-include pythonode/externals *
