--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        arch: [amd64, arm64] 
+        arch: [amd64] 
+        py: ['3.9', '3.10', '3.11', '3.12']
         versions: [v23.11.0]
 
     steps:
@@ -27,7 +28,7 @@ jobs:
       - name: Setup python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.py }}
 
       - name: Install SConstruct
         run: pip install scons
