--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install SConstruct
         run: pip install scons
 
+      - name: Update
+        run: python -m pip install --upgrade pip setuptools wheel
+
       - name: Install dependencies
         run: pip install -r requirements.txt
 
