--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         arch: [amd64] 
-        py: ['3.9']
+        py: ['3.9', '3.10', '3.11', '3.12']
         versions: [v23.11.0]
 
     steps:
@@ -65,5 +65,5 @@ jobs:
       - name: Upload Binary artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: pythonode-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.versions }}
+          name: pythonode-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.versions }}-${{ matrix.py }}
           path: dist/
