--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 authors = [{name = "0880880"}]
 dependencies = []
+python_requires = ">=3.9"
 
 [build-system]
 requires = ["setuptools", "wheel"]
