--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,10 @@ readme = "README.md"
 license = {file = "LICENSE"}
 authors = [{name = "0880880"}]
 dependencies = []
-python_requires = ">=3.9"
 
 [build-system]
 requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+python_requires = ">=3.9"
