--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "pythonode"
+name = "pythonodejs"
 version = "0.1.3"
 description = "Embed Node.js natively in your Python code."
 readme = "README.md"
