--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Install SConstruct
         run: pip install scons
 
+      - name: Fetch submodules
+        run: git submodule update --init --recursive
+
       - name: Update setuptools, pip, and wheel
         run: python -m pip install --upgrade pip setuptools wheel
 
