--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,6 @@ jobs:
       - name: Install SConstruct
         run: pip install scons
 
-      - name: Fetch submodules
-        run: git submodule update --init --recursive
-
       - name: Update setuptools, pip, and wheel
         run: python -m pip install --upgrade pip setuptools wheel
 
@@ -49,10 +46,10 @@ jobs:
 
       - name: Move necessery items to lib
         run: |
-          mkdir -p pythonode/externals
-          mv nodejs/deps/uv pythonode/externals/uv
-          mv nodejs/deps/v8 pythonode/externals/v8
-          mv nodejs/src pythonode/externals/node
+          mkdir -p pythonodejs/externals
+          mv nodejs/deps/uv pythonodejs/externals/uv
+          mv nodejs/deps/v8 pythonodejs/externals/v8
+          mv nodejs/src pythonodejs/externals/node
 
       - name: Build binary
         run: scons
