--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
         run: scons
 
       - name: Tree
-        run: python tree.py
+        run: python tree.py .
 
       - name: Move libnode
         shell: bash
