--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,10 @@ jobs:
       - name: Tree
         run: python tree.py . --max-files 20000 --ignore .git v8 node
 
+      - name: Split fat binary (macOS)
+        if: runner.os == 'macOS'
+        run: lipo pythonodejs/lib/libnode.131.dylib -thin arm64 -output libnode.131.dylib
+
       - name: Validate Build Environment
         run: python setup.py check
       
