--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,8 @@ jobs:
         run: python setup.py check
       
       - name: Build wheels
+        env:
+          MACOSX_DEPLOYMENT_TARGET: 14.0
         run: |
           pip install cibuildwheel
           cibuildwheel
