--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,4 @@ build-backend = "setuptools.build_meta"
 [tool.cibuildwheel]
 build = "cp39-* cp310-* cp311-* cp312-*"
 skip = "pp*"
+before-build = "bash ./pre_build.sh"
