--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,8 @@ build-backend = "setuptools.build_meta"
 [tool.cibuildwheel]
 build = "cp39-* cp310-* cp311-* cp312-*"
 skip = "pp*"
+before-build = "bash ./pre_build.sh"
+CIBW_MANYLINUX_X86_64_IMAGE = "https://quay.io/pypa/manylinux_2_28_x86_64"
+CIBW_MANYLINUX_AARCH64_IMAGE = "https://quay.io/pypa/manylinux_2_28_aarch64"
+CIBW_MANYLINUX_PPC64LE_IMAGE = "https://quay.io/pypa/manylinux_2_28_ppc64le"
+CIBW_MANYLINUX_S390X_IMAGE = "https://quay.io/pypa/manylinux_2_28_s390x"
