--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,10 @@ jobs:
       - name: Build wheels
         env:
           MACOSX_DEPLOYMENT_TARGET: 14.0
+          CIBW_MANYLINUX_X86_64_IMAGE: "https://quay.io/pypa/manylinux_2_28_x86_64"
+          CIBW_MANYLINUX_AARCH64_IMAGE: "https://quay.io/pypa/manylinux_2_28_aarch64"
+          CIBW_MANYLINUX_PPC64LE_IMAGE: "https://quay.io/pypa/manylinux_2_28_ppc64le"
+          CIBW_MANYLINUX_S390X_IMAGE: "https://quay.io/pypa/manylinux_2_28_s390x"
         run: |
           pip install cibuildwheel
           cibuildwheel
