--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,12 +75,8 @@ jobs:
       - name: Build wheels
         env:
           MACOSX_DEPLOYMENT_TARGET: 14.0
-          CIBW_MANYLINUX_X86_64_IMAGE: "quay.io/pypa/manylinux_2_28_x86_64:latest"
-          CIBW_MANYLINUX_AARCH64_IMAGE: "quay.io/pypa/manylinux_2_28_aarch64:latest"
-          CIBW_MANYLINUX_PPC64LE_IMAGE: "quay.io/pypa/manylinux_2_28_ppc64le:latest"
-          CIBW_MANYLINUX_S390X_IMAGE: "quay.io/pypa/manylinux_2_28_s390x:latest"
         run: |
-          pip install cibuildwheel
+          pip install cibuildwheel --manylinux 2_28
           cibuildwheel
 
       - name: Upload Binary artifacts
