--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,5 @@ build-backend = "setuptools.build_meta"
 [tool.cibuildwheel]
 build = "cp39-* cp310-* cp311-* cp312-*"
 skip = "pp*"
+manylinux = "2_39"
 before-build = "bash ./pre_build.sh"
