--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ build-backend = "setuptools.build_meta"
 [tool.cibuildwheel]
 build = "cp39-* cp310-* cp311-* cp312-*"
 skip = "pp*"
-manylinux = "2_39"
+CIBW_MANYLINUX_X86_64_IMAGE = "https://quay.io/pypa/manylinux_2_34_x86_64"
+CIBW_MANYLINUX_AARCH64_IMAGE = "https://quay.io/pypa/manylinux_2_34_aarch64"
 before-build = "bash ./pre_build.sh"
