--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -74,8 +74,8 @@ jobs:
       - name: Build wheels
         env:
           MACOSX_DEPLOYMENT_TARGET: 14.0
-          CIBW_MANYLINUX_X86_64_IMAGE: "https://quay.io/pypa/manylinux_2_34_x86_64"
-          CIBW_MANYLINUX_AARCH64_IMAGE: "https://quay.io/pypa/manylinux_2_34_aarch64"
+          CIBW_MANYLINUX_X86_64_IMAGE: quay.io/pypa/manylinux_2_34_x86_64:latest
+          CIBW_MANYLINUX_AARCH64_IMAGE: quay.io/pypa/manylinux_2_34_aarch64:latest
         run: |
           pip install cibuildwheel
           cibuildwheel
