--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,5 @@
-include pythonodejs/lib/* project/pythonodejs/lib/*
-recursive-include pythonodejs/externals *
+include pythonodejs/lib/* 
+include project/pythonodejs/lib/*
+recursive-include pythonodejs/externals * 
+recursive-include pythonodejs/lib *
+recursive-include project/pythonodejs/lib *
