--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,6 @@ requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.cibuildwheel]
-build = "cp39-* cp310-* cp311-* cp312-*"
+build = "cp39-* cp310-* cp311-*"
 skip = "pp*"
 before-build = "bash ./pre_build.sh"
