cd: Add GITHUB_TOKEN environment variable to build workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,8 @@ jobs:
           VERSION_SPACES=$(npx semantic-release --dry-run | grep -oP 'Published release \K.*? ')
           VERSION="${VERSION_SPACES// /}"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
-
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build:
     needs: version
     name: Build shared libraries
