--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Embed Node.js natively in your Python code."
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [{name = "0880880"}]
+requires-python = ">=3.9,<=3.11"
 dependencies = []
 
 [build-system]
