Add on push formatting

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -1,6 +1,11 @@
 name: Formatting Check
 
 on:
+  push:
+    paths:
+      - 'pythonodejs.cpp'
+      - 'pythonodejs.h'
+      - '**/*.py'
   pull_request:
     paths:
       - 'pythonodejs.cpp'
