--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,14 +99,9 @@ jobs:
         run: |
           pip install cibuildwheel
           cibuildwheel
-
-      - name: Upload Binary artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: pythonode-${{ matrix.os }}-${{ matrix.versions }}
-          path: wheelhouse/
-
+          
       - name: Publish to PyPI
+        if: github.ref == 'refs/heads/main'
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
