--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -44,12 +44,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install black
 
-      - name: Run PEP8 checks (flake8)
+      - name: Run code formatting check (Black)
         run: |
-          if ! flake8 --max-line-length=88 .; then
-            echo "PEP8 formatting issues found."
+          if ! black --check --diff .; then
+            echo "Code is not formatted according to Black."
             exit 1
           fi
 
