--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,14 @@
 [project]
 name = "pythonodejs"
-version = "1.3.6"
+version = "1.4.0"
 description = "Embed Node.js natively in your Python code."
 readme = "README.md"
 license = {file = "LICENSE"}
 authors = [{name = "0880880"}]
 dependencies = []
+
+[tools.setuptools]
+packages = ["node"]
 
 [build-system]
 requires = ["setuptools", "wheel"]
