fix: Update name

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,15 +1,15 @@
-include pythonodejs/lib/*.lib
-include pythonodejs/lib/*.dll
-include pythonodejs/lib/*.so
-include pythonodejs/lib/*.dylib
-include pythonodejs/lib/*.a
-include pythonodejs/lib/*.o
-include pythonodejs/lib/*.sl
-include pythonodejs/lib/*.bundle
+include node/lib/*.lib
+include node/lib/*.dll
+include node/lib/*.so
+include node/lib/*.dylib
+include node/lib/*.a
+include node/lib/*.o
+include node/lib/*.sl
+include node/lib/*.bundle
 
-exclude pythonodejs/lib/*.pdb
-exclude pythonodejs/lib/*.exp
-exclude pythonodejs/lib/*.ilk
-exclude pythonodejs/lib/*.131.dylib
-exclude pythonodejs/lib/*.131.so
-exclude pythonodejs/lib/*.so.131
+exclude node/lib/*.pdb
+exclude node/lib/*.exp
+exclude node/lib/*.ilk
+exclude node/lib/*.131.dylib
+exclude node/lib/*.131.so
+exclude node/lib/*.so.131
