--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,10 +59,10 @@ jobs:
 
       - name: Move necessery items to lib
         run: |
-          mkdir -p node/externals
-          mv nodejs/deps/uv node/externals/uv
-          mv nodejs/deps/v8 node/externals/v8
-          mv nodejs/src node/externals/node
+          mkdir -p pythonodejs/externals
+          mv nodejs/deps/uv pythonodejs/externals/uv
+          mv nodejs/deps/v8 pythonodejs/externals/v8
+          mv nodejs/src pythonodejs/externals/node
 
       - name: Build binary
         if: runner.os != 'Linux'
